--- a/docs/src/gcode/coordinates.adoc
+++ b/docs/src/gcode/coordinates.adoc
@@ -148,7 +148,7 @@ command would not have been modal and any commands issued after it would
 have returned to using the G55 offsets because that coordinate system
 would still be in effect.
 
-[source,{ngc}]
+[source,{ngc}](((G54)))(((G55)))(((G56)))(((G57)))(((G58)))(((G59)))(((G59.1)))(((G59.2)))(((G59.3)))
 ----
 G54	uses parameters of coordinate system 1
 G55	uses parameters of coordinate system 2
